--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class=" flex items-center justify-between ">
                 </div>
                 <div class="grid sm360:grid-cols-1 sm360:gap-3  xs:grid-cols-2  sm:grid-cols-3 sm:gap-2  lg:grid-cols-4 lg:gap-3  pt-5">
-                    <div class=" rounded-[15px] p-3 bg-[#EBEBEB] relative  overflow-hidden" data-aos="fade-up">
+                    <div class=" rounded-[15px] p-3 bg-[#EBEBEB] relative  overflow-hidden">
                         <h3 class="card-status bg-red-500 font-medium absolute top-0 left-0 py-0.5 px-4 rounded-br-[20px] text-white">-30%</h3>
                         <i class="fa-regular fa-heart absolute right-5 cursor-pointer transition duration-300 hover:text-red-500"></i>
                         <img class="scale-75" src="./assets/images/card-6-img.jpg" alt="">
@@ -185,17 +185,15 @@
         </section>
         <section class="new-products">
             <div class="r-container mb-16">
-                <div class=" flex items-center justify-between ">
-                </div>
-                <div class="flex sm360:flex-col sm360:items-center sm360:gap-5  lg:flex-row lg:items-start pt-5">
-                    <div class="sm360:w-[100%] sm360:text-center lg:text-start" data-aos="fade-up">
-                        <h1 class="sm360:text-[32px] font-[500] text-[#FAFAFA]">selection by brands</h1>
-                        <div class="sm360:w-[140px] sm360:py-2 sm360:mt-4 sm360:mx-auto lg:mx-0  rounded-3xl font-medium bg-[#F1C25F] flex justify-center items-center gap-2  cursor-pointer transition duration-300 hover:bg-[#eea813]">
+                <div class="flex justify-center sm360:flex-col sm360:items-center sm360:gap-5  lg:flex-row lg:items-start pt-5">
+                    <div class="sm360:w-[50%] sm360:text-center lg:text-start" data-aos="fade-up">
+                        <h1 class="sm360:text-[32px] font-[500] text-[#FAFAFA] w-[360px]">selection by brands</h1>
+                        <div class="sm360:w-[140px] sm360:py-2 sm360:mt-4 sm360:mx-auto lg:mx-0  rounded-3xl font-medium bg-[#F1C25F] flex justify-center items-center gap-2  cursor-pointer ">
                             <a href="#" class="btn ">By brand</a>
                             <img src="./assets/icons/right-arrow.png" alt="">
                         </div>
                     </div>
-                    <div class="flex sm360:flex-col sm360:gap-2  md:flex-row" data-aos="fade-up">
+                    <div class="flex justify-center sm360:flex-col sm360:gap-2  md:flex-row" data-aos="fade-up">
                         <div class="grid sm360:grid-cols-[100px_100px_100px] sm360:grid-rows-[100px_100px_100px] sm360:gap-2
                                          xs:grid-cols-[120px_120px_120px] xs:grid-rows-[120px_120px_120px]
                                          sm:grid-cols-[140px_140px_140px] sm:grid-rows-[140px_140px_140px]
@@ -234,6 +232,7 @@
                 </div>
             </div>
         </section>
+
         <section>
             <div class="r-container mb-20">
                 <div class="title-box flex items-center justify-between ">
@@ -242,7 +241,7 @@
                     <div class=" rounded-[15px] p-3 bg-[#EBEBEB] relative  overflow-hidden" data-aos="fade-up">
                         <h3 class="card-status bg-red-500 font-medium absolute top-0 left-0 py-0.5 px-4 rounded-br-[20px] text-white">-30%</h3>
                         <i class="fa-regular fa-heart absolute right-5 cursor-pointer transition duration-300 hover:text-red-500"></i>
-                        <img class="scale-75" src="./assets/images/sweater.jpg" alt="">
+                        <img class="scale-75" src="./assets/images/card-6-img.jpg" alt="">
                         <h4 class="card-title w-[60%] normal-case font-medium text-[#0D0D0D]">Bape hoodie jordan air retro</h4>
                         <div class="card-prices flex items-end gap-2">
                             <h3 class="discount-price text-[16px] text-[#FF0000] font-medium">564 000 uzs</h3>
@@ -251,7 +250,7 @@
                     </div>
                     <div class=" rounded-[15px] p-3 bg-[#EBEBEB] relative overflow-hidden" data-aos="fade-up">
                         <i class="fa-regular fa-heart absolute right-5 cursor-pointer transition duration-300 hover:text-red-500"></i>
-                        <img class="scale-75" src="./assets/images/sweater.jpg" alt="">
+                        <img class="scale-75" src="./assets/images/card-6-img.jpg" alt="">
                         <h4 class="card-title w-[60%] normal-case font-medium text-[#0D0D0D]">Bape hoodie jordan air retro</h4>
                         <div class="card-prices flex items-end gap-2">
                             <h3 class="discount-price text-[16px] text-[#333333] font-medium">564 000 uzs</h3>
@@ -260,7 +259,7 @@
                     <div class=" rounded-[15px] p-3 bg-[#EBEBEB] relative overflow-hidden" data-aos="fade-up">
                         <h3 class="card-status bg-[#265AD9] font-medium absolute top-0 left-0 py-0.5 px-4 rounded-br-[20px] text-white">-30%</h3>
                         <i class="fa-regular fa-heart absolute right-5 cursor-pointer transition duration-300 hover:text-red-500"></i>
-                        <img class="scale-75" src="./assets/images/sweater.jpg" alt="">
+                        <img class="scale-75" src="./assets/images/card-6-img.jpg" alt="">
                         <h4 class="card-title w-[60%] normal-case font-medium text-[#0D0D0D]">Bape hoodie jordan air retro</h4>
                         <div class="card-prices flex items-end gap-2">
                             <h3 class="discount-price text-[16px] text-[#333333] font-medium">564 000 uzs</h3>
@@ -268,7 +267,7 @@
                     </div>
                     <div class=" rounded-[15px] p-3 bg-[#EBEBEB] relative overflow-hidden" data-aos="fade-up">
                         <i class="fa-regular fa-heart absolute right-5 cursor-pointer transition duration-300 hover:text-red-500"></i>
-                        <img class="scale-75" src="./assets/images/sweater.jpg" alt="">
+                        <img class="scale-75" src="./assets/images/card-6-img.jpg" alt="">
                         <h4 class="card-title w-[60%] normal-case font-medium text-[#0D0D0D]">Bape hoodie jordan air retro</h4>
                         <div class="card-prices flex items-end gap-2">
                             <h3 class="discount-price text-[16px] text-[#333333] font-medium">564 000 uzs</h3>
@@ -277,6 +276,7 @@
                 </div>
             </div>
         </section>
+
         <section class="zoodpay pb-3">
             <div class="r-container rounded-[20px] sm360:px-6 md:px-10 pt-[40px] sm360:pb-10 md:pb-[90px] bg-[#6EAEE3] relative overflow-hidden"> 
                 <div class="logo-box flex items-center gap-1" data-aos="fade-up">
@@ -284,7 +284,7 @@
                     <h2 class="text-[40px] text-white font-medium">ood pay</h2>
                 </div>
                 <div class="title" data-aos="fade-up">
-                    <div class="title-top flex items-center gap-2">
+                    <div class="title-top flex  items-center gap-2">
                         <h1 class="sm360:text-[32px] md:text-[64px] font-medium leading-none">Bilan</h1>
                         <div class="discount bg-[#F91B1B] sm360:px-3 sm360:py-1 md:px-7 md:py-2 flex items-center gap-5 rounded-[30px]">
                             <p class="sm360:text-[16px] md:text-[20px] text-white">20%</p>
@@ -296,32 +296,40 @@
                 <img class="absolute sm360:hidden xs:hidden md:inline-block w-[250px] top-[20px] md:right-[40px] lg:right-[100px] xl:right-[200px]" src="./assets/images/sneakers-hand.jpg" alt="" data-aos="fade-up">
             </div>
         </section>
-        <div class="r-container rounded-[20px] bg-[#262626] text-white px-10 pt-8 pb-16 mb-8 flex xs:items-start lg:items-end sm360:flex-col sm360:items-start sm360:gap-10 xs:flex-col sm:flex-col lg:flex-row xs:gap-8 gap-28 items-end" >
-            <div class="normal-case  opacity-80">
-                <p class="pb-7 xs:text-start text-[#F1C05B]">All of Nothing</p>
-                <div class="first-line flex sm360:flex-col sm360:gap-2 xs:flex-col lg:flex-row xs:items-start lg:items-end xs:gap-5 lg:gap-14 my-5">
-                    <p>+ 94 099 4001</p>
-                    <p>Biz haqimizda</p>
-                    <a class="bg-[#808080] px-3 py-1 rounded-[7px] sm360:mx-0 xs:mx-0 mx-[55px] text-black" href="#" ><i class="fa-regular fa-envelope"></i> allornothing.uz@gmail.com</a>
-                </div>
-                <div class="second-line flex sm360:flex-col sm360:gap-2 xs:flex-col lg:flex-row xs:items-start lg:items-end xs:gap-5 lg:gap-14">
-                    <p>+ 94 099 4001</p>
-                    <p>Ish vaqti 11:00 - 23:00</p>
-                    <a class="bg-[#808080] px-3 py-1 rounded-[7px] text-black" href="#"><i class="fa-solid fa-location-dot"></i> T.sh Moirobod tuman. Fidokor 10. 4a uy </a>
-                </div>
+
+        <div class=" lg:h-auto r-container rounded-[20px] bg-[#262626] text-white px-12  " >
+            <div class="top">
+                <h3 class="text-[#F1C05B]">All or Nothing</h3><br>
             </div>
-            <div class="footer-links flex gap-3">
-                <div class="footer-item cursor-pointer w-[40px] h-[40px] bg-[#0D0D0D] rounded-[50%] flex items-center justify-center">
-                    <i class="fa-brands fa-instagram text-[20px] opacity-60 cursor-pointer transition duration-300 hover:text-[#F1C05B]"></i>
+            <div class="footer-container  flex gap-20 flex-wrap xl:justify-center items-end ">
+                <div class="coulmn">
+                    <p>+ 94 099 4001</p>
+                    <p class="mt-3">+ 94 099 4001</p>
                 </div>
-                <div class="footer-item cursor-pointer w-[40px] h-[40px] bg-[#0D0D0D] rounded-[50%] flex items-center justify-center">
-                    <i class="fa-brands fa-facebook-f text-[20px] opacity-60 cursor-pointer transition duration-300 hover:text-[#F1C05B]"></i>
+    
+                <div class="column">
+                    <p>Biz haqimizda</p>
+                    <p class="mt-3">Ish vaqti 11:00 - 23:00</p>
                 </div>
-                <div class="footer-item cursor-pointer w-[40px] h-[40px] bg-[#0D0D0D] rounded-[50%] flex items-center justify-center">
-                    <i class="fa-brands fa-telegram text-[20px] opacity-60 cursor-pointer transition duration-300 hover:text-[#F1C05B]"></i>
+    
+                <div class="column">
+                    <button class="bg-[#808080] w-[223px] h-[32px] rounded-lg"><i class="fa-solid fa-envelope"></i> allornothing.uz@gmail.com</button><br>
+                    <button class="bg-[#808080] w-[303px] h-[32px] rounded-lg mt-3"><i class="fa-solid fa-location-dot"></i> T.sh Moirobod tuman. Fidokor 10. 4a uy </button> 
+                </div>
+                <div class="footer-links flex gap-3">
+                    <div class="footer-item cursor-pointer w-[40px] h-[40px] bg-[#0D0D0D] rounded-[50%] flex items-center justify-center">
+                        <i class="fa-brands fa-instagram text-[20px] opacity-60 cursor-pointer transition duration-300 hover:text-[#F1C05B]"></i>
+                    </div>
+                    <div class="footer-item cursor-pointer w-[40px] h-[40px] bg-[#0D0D0D] rounded-[50%] flex items-center justify-center">
+                        <i class="fa-brands fa-facebook-f text-[20px] opacity-60 cursor-pointer transition duration-300 hover:text-[#F1C05B]"></i>
+                    </div>
+                    <div class="footer-item cursor-pointer w-[40px] h-[40px] bg-[#0D0D0D] rounded-[50%] flex items-center justify-center">
+                        <i class="fa-brands fa-telegram text-[20px] opacity-60 cursor-pointer transition duration-300 hover:text-[#F1C05B]"></i>
+                    </div>
                 </div>
             </div>
         </div>
+
     </main>
 
 </body>
