--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="r-container mb-16">
                 <div class="flex justify-center sm360:flex-col sm360:items-center sm360:gap-5  lg:flex-row lg:items-start pt-5">
                     <div class="sm360:w-[50%] sm360:text-center lg:text-start" data-aos="fade-up">
-                        <h1 class="sm360:text-[32px] font-[500] text-[#FAFAFA] w-[360px]">selection by brands</h1>
+                        <h1 class=" sm360:text-[32px]  font-[500] text-[#FAFAFA] w-[360px]  sm360:w-[340px] sm360:ml-[-50px] sm:m-auto sm:w-[360px] lg:m-0 ">selection by brands</h1>
                         <div class="sm360:w-[140px] sm360:py-2 sm360:mt-4 sm360:mx-auto lg:mx-0  rounded-3xl font-medium bg-[#F1C25F] flex justify-center items-center gap-2  cursor-pointer ">
                             <a href="#" class="btn ">By brand</a>
                             <img src="./assets/icons/right-arrow.png" alt="">
@@ -297,11 +297,11 @@
             </div>
         </section>
 
-        <div class=" lg:h-auto r-container rounded-[20px] bg-[#262626] text-white px-12  " >
+        <div class=" lg:h-auto  r-container rounded-[20px] bg-[#262626] text-white px-12  " >
             <div class="top">
                 <h3 class="text-[#F1C05B]">All or Nothing</h3><br>
             </div>
-            <div class="footer-container  flex gap-20 flex-wrap xl:justify-center items-end ">
+            <div class="footer-container  flex gap-20 flex-wrap   items-end ">
                 <div class="coulmn">
                     <p>+ 94 099 4001</p>
                     <p class="mt-3">+ 94 099 4001</p>
@@ -314,7 +314,7 @@
     
                 <div class="column">
                     <button class="bg-[#808080] w-[223px] h-[32px] rounded-lg"><i class="fa-solid fa-envelope"></i> allornothing.uz@gmail.com</button><br>
-                    <button class="bg-[#808080] w-[303px] h-[32px] rounded-lg mt-3"><i class="fa-solid fa-location-dot"></i> T.sh Moirobod tuman. Fidokor 10. 4a uy </button> 
+                    <button class="bg-[#808080] w-[303px] h-[32px] rounded-lg mt-3 sm360:w-52 sm360:h-auto xs:w-[300px]"><i class="fa-solid fa-location-dot"></i> T.sh Moirobod tuman. Fidokor 10. 4a uy </button> 
                 </div>
                 <div class="footer-links flex gap-3">
                     <div class="footer-item cursor-pointer w-[40px] h-[40px] bg-[#0D0D0D] rounded-[50%] flex items-center justify-center">
